<resources>
    <string name="app_name">Diabetex</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_program">ProgramActivity</string>
    <string name="saved_user_isloggedin_key">SavedUserIsLoggedIn</string>
    <string name="logging_out_key">LoggingOutUser</string>
    <string name="saved_user_uid_key">SavedUserUid</string>
    <string name="saved_user_email_key">SavedUserEmail</string>
    <string name="saved_user_file_key">SavedUserFile</string>
    <string name="saved_user_needstologinagain_key">SavedUserNeedsToLoginAgain</string>

    <string name="title_activity_exercise">ExerciseActivity</string>
    <string name="intent_key_pid">IntentPid</string>


    <string name="saved_user_name_key">SavedUserName</string>
    <string name="saved_user_surname_key">SavedUserSurname</string>
    <string name="saved_user_all_videos_downloaded_key">AllVideosDownloaded</string>

    <string name="custom_dialog_diabetes_hint">Şeker Değeri</string>
    <string name="custom_dialog_diastole_hint">Küçük Tansiyon</string>
    <string name="custom_dialog_systole_hint">Büyük Tansiyon</string>
    <string name="custom_dialog_pulse_hint">Nabız</string>
    <string name="title_activity_exercise_details">ExerciseDetailsActivity</string>

    <string name="exDetailsSetHeader">Set</string>
    <string name="exDetailsRepHeader">Tekrar</string>
    <string name="exDetailsRestHeader">Dinlenme</string>
    <string name="exDetailsDailyRepHeader">Günlük</string>
    <string name="exDetailsWeeklyRepHeader">Haftalık</string>
    <string name="exDetailsExpHeader">Açıklama</string>

    <string name="dummy_text">Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.</string>
    <string name="dummy_text_short">Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir.Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı </string>
    <string name="title_activity_exercise_video">ExerciseVideoActivity</string>

    <string name="default_notification_channel_id">8888</string>

    <string name="permanentNotificationChannelId">DiabetexPermanentNotificationChannelId</string>
    <string name="permanentNotificationChannelName">DiabetexPermanentNotificationChannelName</string>

    <string name="minimumSpeedIntentKey">minimumSpeedIntentKey</string>
    <string name="maximumSpeedIntentKey">maximumSpeedIntentKey</string>

     <!--
     Alert dialog messages and titles
     !-->
    <string name="spentTimeForExerciseSoLowMessage">Egzersiz için harcanan süre uzmanlarımızın bu egzersizi bitirmek için tanımladığı minimum sürenin altında. Lütfen egzersizi istenilen tekrarda tamamladığınızdan emin olup tekrar deneyiniz.</string>
    <string name="spentTimeForExerciseSoLowTitle">Süre Çok Kısa</string>
    <string name="spentTimeForExerciseSoLowBtnText">Egzersize Devam Et</string>

    <!--
    Exercise Details Activity Titles
    !-->
    <string name="exerciseDetailsActivityMinWalkingSpeedTitle">Minimum Hız</string>
    <string name="exerciseDetailsActivityMaxWalkingSpeedTitle">Maksimum Hız</string>
    <string name="exerciseDetailsStartExerciseTitle">YÜRÜYÜŞE BAŞLA</string>
    <string name="exerciseDetailsStopExerciseTitle">YÜRÜYÜŞÜ BİTİR</string>
    <!--
    Exercise Details Alert dialog messages and titles
    !-->
    <string name="userCouldCloseScreenMessage">Yürüyüş yaparken ekranı kapatabilirsiniz. \nHızınızı bildirimler ile kontrol edip ayarlayabilirsiniz. \n\nSarı: Hızlan \n\nYeşil: Olduğun Hızda Devam Et \n\nKırmızı: Yavaşla</string>
    <string name="userCouldCloseScreenTitle">Hatırlatma</string>
    <string name="userCouldCloseScreenButtonTitle">Yürüyüşe Başla</string>

</resources>
