<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/box_inset_layout_padding"
        android:paddingBottom="30dp">
        <android.support.wear.widget.BoxInsetLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_grey"
            android:padding="@dimen/box_inset_layout_padding"
            tools:context=".activities.ExerciseDetailsActivity"
            tools:deviceIds="wear">

            <LinearLayout
                android:id="@+id/exerciseDetailsMainLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="20dp">

                <TextView
                    android:id="@+id/exHeader"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto_condensed_bold"
                    android:gravity="top|center_horizontal"
                    android:inputType="textMultiLine"
                    android:paddingEnd="22dp"
                    android:paddingStart="32dp"
                    android:text="Egzersiz Başlığı"
                    android:textSize="@dimen/exercise_details_info_size" />

                <android.support.wear.widget.BoxInsetLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:boxedEdges="left|right">


                        <ImageButton
                            android:id="@+id/exDetailsVideoPlayImage"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/exercise_details_header_margin"
                            android:background="@drawable/circular_button"
                            android:src="@drawable/play_white" />
                    </LinearLayout>
                </android.support.wear.widget.BoxInsetLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/exerciseDetailsSetHeader"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:gravity="center"
                            android:text="@string/exDetailsSetHeader"
                            android:textSize="@dimen/exercise_details_info_header_size" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/exerciseSets"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_condensed_bold"
                            android:gravity="center"
                            android:text="5"
                            android:textSize="@dimen/exercise_details_info_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/exerciseDetailsRepHeader"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"

                            android:gravity="center"
                            android:text="@string/exDetailsRepHeader"
                            android:textSize="@dimen/exercise_details_info_header_size" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/exerciseRep"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_condensed_bold"
                            android:gravity="center"
                            android:text="5"
                            android:textSize="@dimen/exercise_details_info_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/exerciseDetailsRestLinearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:gravity="center"

                            android:text="@string/exDetailsRestHeader"
                            android:textSize="@dimen/exercise_details_info_header_size" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/exerciseRest"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_condensed_bold"
                            android:gravity="center"
                            android:text="5"
                            android:textSize="@dimen/exercise_details_info_size" />

                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:gravity="center"
                            android:text="@string/exDetailsDailyRepHeader"
                            android:textSize="@dimen/exercise_details_info_header_size" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ProgressBar
                                android:id="@+id/exDetailsDailyRepProgressBar"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center"
                                android:background="@drawable/circular_shape"
                                android:indeterminate="false"
                                android:max="100"
                                android:progress="100"
                                android:progressDrawable="@drawable/circular_progress_bar" />

                            <android.support.v7.widget.AppCompatTextView
                                android:id="@+id/exerciseDailyRep"
                                style="@style/TextAppearance.AppCompat.Body1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/roboto_condensed_bold"
                                android:text="1"
                                android:textSize="@dimen/exercise_details_info_size" />
                        </FrameLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:gravity="center"

                            android:text="@string/exDetailsWeeklyRepHeader"
                            android:textSize="@dimen/exercise_details_info_header_size" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ProgressBar
                                android:id="@+id/exDetailsWeeklyRepProgressBar"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center"
                                android:background="@drawable/circular_shape"
                                android:indeterminate="false"
                                android:max="100"
                                android:progress="100"
                                android:progressDrawable="@drawable/circular_progress_bar" />

                            <android.support.v7.widget.AppCompatTextView
                                android:id="@+id/exerciseWeeklyRep"
                                style="@style/TextAppearance.AppCompat.Body1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/roboto_condensed_bold"
                                android:text="1"
                                android:textSize="@dimen/exercise_details_info_size" />
                        </FrameLayout>
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/exDetailsHeader"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/roboto"
                        android:gravity="center"
                        android:text="@string/exDetailsExpHeader"
                        android:textSize="@dimen/exercise_details_info_header_size" />

                    <TextView
                        android:id="@+id/exDetailsExpEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="42dp"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/open_sans"
                        android:paddingEnd="26dp"
                        android:paddingStart="32dp"
                        android:text="@string/dummy_text_short"
                        android:textSize="16dp" />

                </LinearLayout>
            </LinearLayout>
        </android.support.wear.widget.BoxInsetLayout>

    </ScrollView>
    <ImageButton
        android:id="@+id/exerciseDoneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="@color/white"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:src="@drawable/inset_done_button"
        android:layout_alignParentBottom="true"
        android:background="@drawable/roundedbutton2"
        style="@style/TextAppearance.AppCompat.Body2"
        android:fontFamily="@font/roboto_condensed_bold"
        android:textSize="20dp"
        android:fitsSystemWindows="true"/>
</RelativeLayout>